--- a/man/figures/tables/jfaPoissonBayesFactors.Rmd
+++ b/man/figures/tables/jfaPoissonBayesFactors.Rmd
@@ -32,17 +32,14 @@ library(jfa)
 
 ```{r, include = F}
 
-confidence <- 0.90
-materiality <- 0.10
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    prior <- jfa::auditPrior(confidence, likelihood = "poisson", method = "median", materiality = materiality)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "poisson", prior = prior, materiality = materiality)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.10, n = n[rows], k = k[columns], 
+                                    likelihood = 'poisson')
   }
 }
 
@@ -83,17 +80,14 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.90
-materiality <- 0.05
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    prior <- jfa::auditPrior(confidence, likelihood = "poisson", method = "median", materiality = materiality)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "poisson", prior = prior, materiality = materiality)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.05, n = n[rows], k = k[columns], 
+                                    likelihood = 'poisson')
   }
 }
 
@@ -133,17 +127,14 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.90
-materiality <- 0.02
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    prior <- jfa::auditPrior(confidence, likelihood = "poisson", method = "median", materiality = materiality)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "poisson", prior = prior, materiality = materiality)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.02, n = n[rows], k = k[columns], 
+                                    likelihood = 'poisson')
   }
 }
 
@@ -178,17 +169,14 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.90
-materiality <- 0.01
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    prior <- jfa::auditPrior(confidence, likelihood = "poisson", method = "median", materiality = materiality)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "poisson", prior = prior, materiality = materiality)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.01, n = n[rows], k = k[columns], 
+                                    likelihood = 'poisson')
   }
 }
 
