--- a/doc/v4_testing_misstatement.Rmd
+++ b/doc/v4_testing_misstatement.Rmd
@@ -35,7 +35,7 @@ This will be added in a future version of `jfa`.
 
 Bayesian hypothesis testing uses the Bayes factor, $BF_{-+}$ or $BF_{+-}$, to make a statement about the evidence provided by the sample in support for one of the two hypotheses $H_-$ or $H_+$. The subscript The Bayes factor denotes which hypothesis it favors. By default, the `evaluation()` function returns the value for $BF_{-+}$.
 
-As an example of how to interpret the Bayes factor, the value of $BF_{-+} = 10$ (provided by the `evluation()` function) can be interpreted as: *the data are 10 times more likely to have occurred under the hypothesis $H_-:\theta<\theta_{max}$ than under the hypothesis $H_+:\theta\geq\theta_{max}$*. $BF_{-+} > 1$ indicates evidence for $H_-$, while $BF_{-+} < 1$ indicates evidence for $H_+$. 
+As an example of how to interpret the Bayes factor, the value of $BF_{-+} = 10$ (provided by the `evaluation()` function) can be interpreted as: *the data are 10 times more likely to have occurred under the hypothesis $H_-:\theta<\theta_{max}$ than under the hypothesis $H_+:\theta\geq\theta_{max}$*. $BF_{-+} > 1$ indicates evidence for $H_-$, while $BF_{-+} < 1$ indicates evidence for $H_+$. 
 
 | $BF_{-+}$ | Strength of evidence |
 |---------|-------|
