--- a/man/figures/tables/jfaHypergeometricBayesFactors.Rmd
+++ b/man/figures/tables/jfaHypergeometricBayesFactors.Rmd
@@ -32,8 +32,6 @@ library(jfa)
 
 ```{r, include = F}
 
-confidence <- 0.90
-materiality <- 0.10
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 100
@@ -43,9 +41,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.10, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -87,8 +84,6 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.90
-materiality <- 0.10
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 500
@@ -98,9 +93,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.10, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -142,8 +136,6 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.90
-materiality <- 0.10
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 1000
@@ -153,9 +145,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.10, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -208,9 +199,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.05, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -252,8 +242,6 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.95
-materiality <- 0.05
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 500
@@ -263,9 +251,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.05, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -307,8 +294,6 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.95
-materiality <- 0.05
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 1000
@@ -318,9 +303,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.05, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -362,8 +346,6 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.975
-materiality <- 0.025
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 100
@@ -373,9 +355,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.02, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -395,7 +376,7 @@ table[is.na(table)] <- ""
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 7: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 100) — <br>Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 2.5 Percent</center>",
+                       caption = "<center>Table 7: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 100) — <br>Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 2 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
@@ -417,8 +398,6 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.975
-materiality <- 0.025
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 500
@@ -428,9 +407,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.02, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -450,7 +428,7 @@ table[is.na(table)] <- ""
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 8: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 500) — <br>Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 2.5 Percent</center>",
+                       caption = "<center>Table 8: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 500) — <br>Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 2 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
@@ -472,8 +450,6 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.975
-materiality <- 0.025
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 1000
@@ -483,9 +459,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.02, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -505,7 +480,7 @@ table[is.na(table)] <- ""
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 9: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 1000) — <br>Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 2.5 Percent</center>",
+                       caption = "<center>Table 9: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 1000) — <br>Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 2 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
@@ -527,8 +502,6 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.99
-materiality <- 0.01
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 100
@@ -538,9 +511,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.02, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -582,8 +554,6 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.99
-materiality <- 0.01
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 500
@@ -593,9 +563,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.01, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
@@ -637,8 +606,6 @@ kableExtra::kable_paper(ktable, "striped")
 
 ```{r, include = F}
 
-confidence <- 0.99
-materiality <- 0.01
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 1000
@@ -648,9 +615,8 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-    prior <- jfa::auditPrior(confidence, likelihood = "hypergeometric", method = "median", materiality = materiality, N = N)
-      ss <- jfa::evaluation(confidence, nSumstats = n[rows], kSumstats = k[columns], method = "hypergeometric", prior = prior, materiality = materiality, N = N)
-      tab[rows, columns] <- ss$posterior$hypotheses$bf
+      tab[rows, columns] <- auditBF(materiality = 0.01, n[rows], k[columns], 
+                                    likelihood = "hypergeometric", N = N)
   }
 }
 
